--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,20 @@
     <string name="try_to_sleep_at_least_8_hours_every_night_if_you_don_t_get_enough_shut_eye_your_skin_gets_tired_just_like_you_so_don_t_risk_it_you_can_also_apply_honey_on_your_face_twice_or_thrice_a_week_to_naturally_soothe_and_heal_your_skin">--Try to sleep at least 8 hours every night. If you don’t get enough shut eye, your skin gets tired just like you. So don’t risk it. You can also apply honey on your face twice or thrice a week to naturally soothe and heal your skin.</string>
     <string name="_5_beauty_sleep">5) Beauty Sleep</string>
     <string name="dermaface1">DermaFace++</string>
+    <string name="finish">Finish!</string>
+    <string name="finish">Finish!</string>
+    <string name="dont_s1">DONT\'s</string>
+    <string name="_4_forgetting_skincare_sessions">4) forgetting skincare sessions</string>
+    <string name="forget_to_wash_and_moisturize_your_face_before_going_to_bed_for_dry_skin_use_milder_cleansers_that_are_free_from_alcohol_apply_lots_of_moisturizer_and_avoid_hot_water_as_it_dries_out_the_skin_excessively">--Forget to wash and moisturize your face before going to bed. For dry skin, use milder cleansers that are free from alcohol. Apply lots of moisturizer, and avoid hot water as it dries out the skin excessively.</string>
+    <string name="dont_s2">DONT\'s</string>
+    <string name="_3_ignoring_skincare_sessions">3) Ignoring skincare sessions</string>
+    <string name="skip_skincare_before_and_after_a_workout_apply_a_toner_to_help_minimize_oil_production_before_heading_out_exfoliate_after_and_then_apply_shea_butter_or_olive_oil_to_moisturize_the_skin">--Skip skincare before and after a workout. Apply a toner to help minimize oil production before heading out. Exfoliate after, and then apply shea butter or olive oil to moisturize the skin.</string>
+    <string name="skip_the_sunscreen_whether_it_s_cloudy_or_cold_outside_no_excuses_if_you_re_heading_to_a_beach_or_around_reflective_surfaces_like_snow_or_ice_lather_your_skin_up_with_some_more_sunscreen_with_spf_of_at_least_30">--Skip the sunscreen, whether it\'s cloudy or cold outside (no excuses). If you’re heading to a beach or around reflective surfaces like snow or ice, lather your skin up with some more sunscreen with SPF of at least 30.</string>
+    <string name="_5_skipping_sunscreen_sessions">5) Skipping Sunscreen sessions</string>
+    <string name="dont_s3">DONT\'s</string>
+    <string name="_2_dont_pop_it_out">2) Dont pop it out</string>
+    <string name="pop_pimples_because_it_can_lead_to_more_swelling_redness_and_even_scarring_feel_a_pimple_is_on_its_way_just_clean_the_area_with_rose_water_and_place_a_chilled_green_tea_bag_for_10_minutes">--Pop pimples because it can lead to more swelling, redness, and even scarring. Feel a pimple is on its way? Just clean the area with rose water, and place a chilled green tea bag for 10 minutes.</string>
+    <string name="dont_s5">DONT\'s</string>
+    <string name="_1_avoid_excessive_stressing">1) Avoid excessive stressing</string>
+    <string name="neglect_your_jawline_and_facial_muscles_for_just_5_minutes_a_day_perform_a_few_facial_exercises_you_can_jut_out_your_lower_lip_in_such_a_way_that_wrinkles_are_created_on_the_chin_then_lower_your_chin_to_your_chest">--Neglect your jawline and facial muscles. For just 5 minutes a day, perform a few facial exercises. You can jut out your lower lip in such a way that wrinkles are created on the chin, then lower your chin to your chest.</string>
 </resources>
