--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,34 @@
     <string name="_1_avoid_excessive_stressing">1) Avoid excessive stressing</string>
     <string name="neglect_your_jawline_and_facial_muscles_for_just_5_minutes_a_day_perform_a_few_facial_exercises_you_can_jut_out_your_lower_lip_in_such_a_way_that_wrinkles_are_created_on_the_chin_then_lower_your_chin_to_your_chest">--Neglect your jawline and facial muscles. For just 5 minutes a day, perform a few facial exercises. You can jut out your lower lip in such a way that wrinkles are created on the chin, then lower your chin to your chest.</string>
     <string name="dont_s6">DONT\'S</string>
+    <string name="remedies1">REMEDIES</string>
+    <string name="_1_skin_astringent">1) Skin Astringent</string>
+    <string name="removes_deep_seated_dirt_within_the_face_it_may_be_alcohol_or_chemically_based_and_is_used_to_clean_the_skin_and_close_pores_applying_every_night_before_sleeping_is_recommended">removes deep seated dirt within the face. It may be alcohol or chemically-based and is used to clean the skin and close pores. Applying every night before sleeping is recommended.</string>
+    <string name="remedies2">REMEDIES</string>
+    <string name="_2_skin_brightening_cream">2) Skin Brightening Cream</string>
+    <string name="skin_whitening_is_the_use_of_substances_mixtures_or_physical_treatments_to_lighten_skin_color_skin_whitening_treatments_work_by_reducing_the_skin_s_melanin_content">--Skin whitening is the use of substances, mixtures, or physical treatments to lighten skin color. Skin whitening treatments work by reducing the skin\'s melanin content.</string>
+    <string name="remedies3">REMEDIES</string>
+    <string name="_3_sunblock">3) Sunblock</string>
+    <string name="a_substance_that_you_put_on_your_skin_to_prevent_it_from_being_damaged_by_the_sun_that_prevents_any_of_the_sun_s_rays_from_reaching_the_skin">--a substance that you put on your skin to prevent it from being damaged by the sun, that prevents any of the sun\'s rays from reaching the skin.</string>
+    <string name="remedies4">REMEDIES</string>
+    <string name="_4_mild_and_gentle_soaps">4) Mild and gentle soaps</string>
+    <string name="it_contains_ingredients_that_helps_the_skin_look_healthier_mild_soaps_usually_contain_ingredients_that_soothe_and_refresh_your_skin_such_as_witch_hazel_or_aloe_vera_vegetable_and_herbal_oils_such_as_evening_primrose_oil_olive_oil_or_coconut_oil">--it contains ingredients that helps the skin look healthier. Mild soaps usually contain ingredients that soothe and refresh your skin, such as: Witch hazel or aloe vera. Vegetable and herbal oils such as evening primrose oil, olive oil, or coconut oil.</string>
+    <string name="remedies5">REMEDIES</string>
+    <string name="_5_skin_toner">5) Skin Toner</string>
+    <string name="preps_the_skin_for_moisturizers_and_serum_while_getting_rid_of_excess_oil_and_stubborn_dirt_or_makeup_leftover_on_your_face_after_you_wash_it_toners_help_to_remove_any_traces_of_oil_perspiration_or_makeup_from_your_skin">--preps the skin for moisturizers and serum, while getting rid of excess oil and stubborn dirt or makeup leftover on your face after you wash it. Toners help to remove any traces of oil, perspiration or makeup from your skin.</string>
+    <string name="foods_to_eat1">FOODS TO EAT</string>
+    <string name="_1_fatty_fish">1) Fatty Fish</string>
+    <string name="fatty_fish_such_as_salmon_mackerel_and_herring_are_excellent_foods_for_healthy_skin_they_are_rich_sources_of_omega_3_fatty_acids_which_are_important_for_maintaining_skin_health_omega_3_fatty_acids_are_necessary_to_keep_skin_thick_supple_and_moisturized_in_fact_a_deficiency_in_omega_3_fats_can_cause_dry_skin">--Fatty fish, such as salmon, mackerel and herring, are excellent foods for healthy skin. They are rich sources of omega-3 fatty acids, which are important for maintaining skin health. Omega-3 fatty acids are necessary to keep skin thick, supple and moisturized. In fact, a deficiency in omega-3 fats can cause dry skin.</string>
+    <string name="foods_to_eat2">FOODS TO EAT</string>
+    <string name="_2_broccoli">2) Broccoli</string>
+    <string name="broccoli_is_full_of_many_vitamins_and_minerals_important_for_skin_health_including_zinc_vitamin_a_and_vitamin_c_it_also_contains_lutein_a_carotenoid_that_works_like_beta_carotene_lutein_protects_your_skin_from_oxidative_damage_which_can_cause_your_skin_to_become_dry_and_wrinkled">--Broccoli is full of many vitamins and minerals important for skin health, including zinc, vitamin A and vitamin C. It also contains lutein, a carotenoid that works like beta-carotene. Lutein protects your skin from oxidative damage, which can cause your skin to become dry and wrinkled.</string>
+    <string name="foods_to_eat3">FOODS TO EAT</string>
+    <string name="_3_tomatoes">3) Tomatoes</string>
+    <string name="tomatoes_are_a_great_source_of_vitamin_c_and_contain_all_of_the_major_carotenoids_including_lycopene_beta_carotene_lutein_and_lycopene_have_been_shown_to_protect_your_skin_against_damage_from_the_sun_they_may_also_help_prevent_wrinkling">--Tomatoes are a great source of vitamin C and contain all of the major carotenoids, including lycopene. Beta-carotene, lutein and lycopene have been shown to protect your skin against damage from the sun. They may also help prevent wrinkling.</string>
+    <string name="foods_to_eat4">FOODS TO EAT</string>
+    <string name="_4_dark_chocolate">4) Dark Chocolate</string>
+    <string name="if_you_need_one_more_reason_to_eat_chocolate_here_it_is_the_effects_of_cocoa_on_your_skin_are_pretty_phenomenal_after_6_12_weeks_of_consuming_a_cocoa_powder_high_in_antioxidants_each_day_participants_in_one_study_experience_thicker_more_hydrated_skin_their_skin_was_also_less_rough_and_scaly_less_sensitive_to_sunburn_and_had_better_blood_flow_which_brings_more_nutrients_to_your_skin">--If you need one more reason to eat chocolate, here it is: The effects of cocoa on your skin are pretty phenomenal. After 6–12 weeks of consuming a cocoa powder high in antioxidants each day, participants in one study experience thicker, more hydrated skin. Their skin was also less rough and scaly, less sensitive to sunburn and had better blood flow — which brings more nutrients to your skin.</string>
+    <string name="foods_to_eat5">FOODS TO EAT</string>
+    <string name="_5_green_tea">5) Green Tea</string>
+    <string name="green_tea_may_protect_your_skin_from_damage_and_aging_the_powerful_compounds_found_in_green_tea_are_called_catechins_and_work_to_improve_the_health_of_your_skin_in_several_ways">Green tea may protect your skin from damage and aging. The powerful compounds found in green tea are called catechins and work to improve the health of your skin in several ways.</string>
 </resources>
