--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="foods_to_eat5">FOODS TO EAT</string>
     <string name="_5_green_tea">5) Green Tea</string>
     <string name="green_tea_may_protect_your_skin_from_damage_and_aging_the_powerful_compounds_found_in_green_tea_are_called_catechins_and_work_to_improve_the_health_of_your_skin_in_several_ways">Green tea may protect your skin from damage and aging. The powerful compounds found in green tea are called catechins and work to improve the health of your skin in several ways.</string>
+    <string name="green_tea_may_protect_your_skin_from_damage_and_aging_the_powerful_compounds_found_in_green_tea_are_called_catechins_and_work_to_improve_the_health_of_your_skin_in_several_ways_green_tea_is_natural_treament_for_oily_faces">Green tea may protect your skin from damage and aging. The powerful compounds found in green tea are called catechins and work to improve the health of your skin in several ways. Green tea is natural treament for oily faces.</string>
 </resources>
